Make sure the build runs on Java 8